# ast-toolkit-rs

./: Cargo.toml  README.md
ast-toolkit/: Cargo.toml
ast-toolkit-derive/: Cargo.toml
ast-toolkit-derive/src/: ast.rs  diagnostic.rs  lib.rs  railroad.rs
ast-toolkit/examples/: asts.rs  derive.rs  diagnostic.rs  display_span.rs  docs.rs  docs_nom.rs  nom.rs  nom_errors.rs  railroad.rs  railroad_derive.rs  test.rs
ast-toolkit/src/: diagnostic.rs  diagnostic_old.rs  display_source.rs  lib.rs  nom.rs  position.rs  railroad.rs  span.rs
ast-toolkit/src/diagnostic/: diagnostic.rs  formatter.rs  located_span.rs  mod.rs  span.rs  style.rs
ast-toolkit/src/nom/: mod.rs  multi.rs
ast-toolkit/src/nom/bytes/: complete.rs  mod.rs  streaming.rs
ast-toolkit/src/nom/character/: complete.rs  mod.rs
derive/ast-toolkit-diagnostic-derive/: Cargo.toml
derive/ast-toolkit-diagnostic-derive/src/: lib.rs
derive/ast-toolkit-railroad-derive/: Cargo.toml
derive/ast-toolkit-railroad-derive/src/: lib.rs  railroad.rs
derive/ast-toolkit-snack-derive/: Cargo.toml
derive/ast-toolkit-snack-derive/src/: comb.rs  combinator.rs  lib.rs
derive/ast-toolkit-span-derive/: Cargo.toml
derive/ast-toolkit-span-derive/src/: analyze.rs  generate.rs  lib.rs  spanning.rs  spanning_inf.rs  spanning_mut.rs  spanning_ref.rs
lib/ast-toolkit-diagnostic/: Cargo.toml  README.md
lib/ast-toolkit-diagnostic/src/: annotations.rs  diagnostic.rs  layout.rs  layout_old.rs  lib.rs  render.rs  render_old.rs  span.rs  style.rs  themes.rs
lib/ast-toolkit-diagnostic/src/layout/: buffer.rs  layouters.rs  mod.rs  s1_grouping.rs  s2_split_replace.rs  s3_apply_replace.rs  s4_layouters.rs
lib/ast-toolkit-diagnostic/src/render/: mod.rs
lib/ast-toolkit-loc/: Cargo.toml
lib/ast-toolkit-loc/src/: lib.rs  range.rs  source.rs  spec.rs
lib/ast-toolkit-nibble/: Cargo.toml
lib/ast-toolkit-nibble/examples/: hello_world.rs
lib/ast-toolkit-nibble/src/: lib.rs
lib/ast-toolkit-print/: Cargo.toml
lib/ast-toolkit-print/src/: display.rs  formatter.rs  lib.rs  macros.rs  spec.rs
lib/ast-toolkit-punctuated/: Cargo.toml
lib/ast-toolkit-punctuated/src/: common.rs  lib.rs  macros.rs  normal.rs  railroad.rs  serde.rs  span.rs  trailing.rs
lib/ast-toolkit-punctuated/src/snack/: mod.rs  punctuated_many0.rs  punctuated_many1.rs  punctuated_most0.rs  punctuated_most1.rs  punctuated_nontrailing_many0.rs  punctuated_nontrailing_many1.rs  punctuated_nontrailing_most0.rs  punctuated_nontrailing_most1.rs
lib/ast-toolkit-railroad/: Cargo.toml
lib/ast-toolkit-railroad/examples/: railroad.rs  railroad_derive.rs
lib/ast-toolkit-railroad/src/: lib.rs
lib/ast-toolkit-railroad/tests/: derive_generics.rs
lib/ast-toolkit-snack/: Cargo.toml  README.md
lib/ast-toolkit-snack/examples/: add.rs  test.rs
lib/ast-toolkit-snack/src/: asserts.rs  auxillary.rs  boxed.rs  branch.rs  branch2.rs  closure.rs  comb.rs  combinator.rs  debug.rs  error.rs  error_new.rs  fail.rs  fmt.rs  input.rs  lib.rs  macros.rs  multi.rs  procedural.rs  result.rs  sequence.rs  sequence2.rs  slice.rs  span.rs  spec.rs  tuple.rs  utf8.rs  utils.rs
lib/ast-toolkit-snack/src/ascii/: digit0.rs  digit1.rs  mod.rs  whitespace0.rs  whitespace1.rs
lib/ast-toolkit-snack/src/branch/: alt.rs  mod.rs
lib/ast-toolkit-snack/src/branch2/: alt.rs  mod.rs
lib/ast-toolkit-snack/src/bytes/: byte.rs  complete.rs  mod.rs  one_of0.rs  one_of1.rs  streaming.rs  while0.rs  while1.rs
lib/ast-toolkit-snack/src/bytes2/: mod.rs  one_of0.rs  while0.rs
lib/ast-toolkit-snack/src/c/: complete.rs  mod.rs
lib/ast-toolkit-snack/src/c2/: mod.rs
lib/ast-toolkit-snack/src/combinator/: closure.rs  consume.rs  discard.rs  forget_ty.rs  map.rs  map_err.rs  map_fallible.rs  map_fatal.rs  map_recoverable.rs  mod.rs  nonempty.rs  nop.rs  not.rs  opt.rs  peek.rs  recognize.rs  remember.rs  until.rs
lib/ast-toolkit-snack/src/combinator2/: consume.rs  discard.rs  map.rs  map_fallible.rs  map_fatal.rs  map_recoverable.rs  mod.rs  nop.rs  not.rs  opt.rs  recognize.rs
lib/ast-toolkit-snack/src/complete/: bytes.rs  mod.rs  sequence.rs  utf8.rs
lib/ast-toolkit-snack/src/debug/: inspect.rs  inspect_after.rs  mod.rs
lib/ast-toolkit-snack/src/debug2/: inspect.rs  inspect_after.rs  mod.rs
lib/ast-toolkit-snack/src/error/: cut.rs  expected.rs  fatal.rs  mod.rs  recoverable.rs  uncut.rs
lib/ast-toolkit-snack/src/error2/: cut.rs  fatal.rs  mod.rs  recoverable.rs  uncut.rs
lib/ast-toolkit-snack/src/extra/: escaped.rs  mod.rs
lib/ast-toolkit-snack/src/multi/: complete.rs  many0.rs  many1.rs  mod.rs  most0.rs  most1.rs  separated_many0.rs  separated_many1.rs  separated_most0.rs  separated_most1.rs  streaming.rs
lib/ast-toolkit-snack/src/multi2/: few0.rs  few1.rs  many0.rs  many1.rs  mod.rs  most0.rs  most1.rs  separated_many0.rs  separated_many1.rs  separated_most0.rs  separated_most1.rs
lib/ast-toolkit-snack/src/scan/: elem.rs  mod.rs  one_of0.rs  one_of1.rs  pop.rs  tag.rs  while0.rs  while1.rs
lib/ast-toolkit-snack/src/sequence/: complete.rs  delimited.rs  mod.rs  pair.rs  preceded.rs  repeated.rs  separated_pair.rs  streaming.rs  terminated.rs  tuple.rs
lib/ast-toolkit-snack/src/sequence2/: delimited.rs  mod.rs  pair.rs  preceded.rs  repeated.rs  separated_pair.rs  terminated.rs  tuple.rs
lib/ast-toolkit-snack/src/streaming/: bytes.rs  mod.rs  sequence.rs  utf8.rs
lib/ast-toolkit-snack/src/utf8/: complete.rs  complete2.rs  digit0.rs  graph.rs  mod.rs  one_of0.rs  one_of1.rs  tag_s.rs  while0.rs  while1.rs  whitespace0.rs
lib/ast-toolkit-sources/: Cargo.toml
lib/ast-toolkit-sources/src/: key.rs  lib.rs
lib/ast-toolkit-span/: CHANGELOG.md  Cargo.toml
lib/ast-toolkit-span/examples/: spanning_derive.rs
lib/ast-toolkit-span/src/: as_bytes.rs  as_str.rs  display.rs  eq.rs  formatter.rs  hash.rs  lib.rs  lines.rs  locate.rs  ord.rs  range.rs  range2.rs  span.rs  span2.rs  spannable.rs  spanning.rs  style.rs  tests.rs
lib/ast-toolkit-tokens/: Cargo.toml
lib/ast-toolkit-tokens/examples/: dot.rs  parens.rs
lib/ast-toolkit-tokens/src/: lib.rs  macros.rs
src/: lib.rs  (+3 more)
(+89 files in other folders)
