[package]
name = "ast-toolkit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provides various tools that are useful when working with ASTs as used in compilers."


[dependencies]
ast-toolkit-diagnostic = { path = "./lib/ast-toolkit-diagnostic", optional = true }
ast-toolkit-punctuated = { path = "./lib/ast-toolkit-punctuated", optional = true }
ast-toolkit-railroad = { path = "./lib/ast-toolkit-railroad", optional = true }
ast-toolkit-span = { path = "./lib/ast-toolkit-span", optional = true }


[features]
default = []
derive = [ "ast-toolkit-railroad/derive" ]
diagnostic = [ "dep:ast-toolkit-diagnostic" ]
punctuated = [ "punctuated-normal" ]
punctuated-normal = [ "dep:ast-toolkit-punctuated", "ast-toolkit-punctuated/normal", "ast-toolkit-railroad/punctuated-normal" ]
punctuated-trailing = [ "dep:ast-toolkit-punctuated", "ast-toolkit-punctuated/trailing", "ast-toolkit-railroad/punctuated-trailing" ]
railroad = [ "dep:ast-toolkit-railroad" ]
span = [ "dep:ast-toolkit-span" ]


[workspace]
resolver = "2"
members = [
    # Components
    "lib/ast-toolkit-diagnostic",
    "lib/ast-toolkit-punctuated",
    "lib/ast-toolkit-railroad",
    "lib/ast-toolkit-span",

    # Derive
    # "derive/ast-toolkit-diagnostic-derive",
    "derive/ast-toolkit-railroad-derive",

    # Temp
    "test",
]


[workspace.package]
edition = "2021"
authors = [ "Lut99" ]
repository = "https://github.com/Lut99/ast-toolkit-rs"
