[package]
name = "ast-toolkit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provides various tools that are useful when working with ASTs as used in compilers."


[dependencies]
ast-toolkit-diagnostic = { path = "./lib/ast-toolkit-diagnostic", optional = true }
ast-toolkit-punctuated = { path = "./lib/ast-toolkit-punctuated", optional = true }
ast-toolkit-railroad = { path = "./lib/ast-toolkit-railroad", optional = true }
ast-toolkit-snack = { path = "./lib/ast-toolkit-snack", optional = true }
ast-toolkit-span = { path = "./lib/ast-toolkit-span", optional = true }
ast-toolkit-sources = { path = "./lib/ast-toolkit-sources", optional = true }
ast-toolkit-tokens = { path = "./lib/ast-toolkit-tokens", optional = true }


[features]
default = []

derive = ["ast-toolkit-railroad/derive", "ast-toolkit-span/derive"]
macros = ["ast-toolkit-punctuated/macros", "ast-toolkit-snack/macros"]
serde = [
    "ast-toolkit-punctuated/serde",
    "ast-toolkit-span/serde",
    "ast-toolkit-tokens/serde",
]

diagnostic = ["dep:ast-toolkit-diagnostic"]

punctuated = ["dep:ast-toolkit-punctuated"]
punctuated-macros = ["punctuated", "ast-toolkit-punctuated/macros"]
punctuated-serde = ["punctuated", "ast-toolkit-punctuated/serde"]
punctuated-snack = ["punctuated", "ast-toolkit-punctuated/snack"]
punctuated-span = ["punctuated", "ast-toolkit-punctuated/span"]

railroad = [
    "dep:ast-toolkit-railroad",
    "ast-toolkit-punctuated/railroad",
    "ast-toolkit-tokens/railroad",
]
railroad-parking-lot = ["railroad", "ast-toolkit-railroad/parking-lot"]

snack = [
    "dep:ast-toolkit-snack",
    "ast-toolkit-punctuated/snack",
    "ast-toolkit-tokens/snack",
]
snack-extra = ["snack", "ast-toolkit-snack/extra"]
snack-macros = ["snack", "ast-toolkit-snack/macros"]

span = ["dep:ast-toolkit-span", "ast-toolkit-punctuated/span"]
span-derive = ["ast-toolkit-span/derive"]
span-serde = ["ast-toolkit-span/serde"]

sources = ["dep:ast-toolkit-sources"]

tokens = ["dep:ast-toolkit-tokens"]
tokens-serde = ["ast-toolkit-tokens/serde"]


[workspace]
resolver = "2"
members = [
    # Components
    "lib/ast-toolkit-diagnostic",
    "lib/ast-toolkit-punctuated",
    "lib/ast-toolkit-railroad",
    "lib/ast-toolkit-snack",
    "lib/ast-toolkit-span",
    "lib/ast-toolkit-sources",
    "lib/ast-toolkit-tokens",

    # Derive
    "derive/ast-toolkit-railroad-derive",
    "derive/ast-toolkit-span-derive",
]


[workspace.package]
edition = "2021"
authors = ["Lut99"]
repository = "https://github.com/Lut99/ast-toolkit-rs"
