[package]
name = "ast-toolkit-derive"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
description = "Crate that implements various `#[derive(...)]` macros for the `ast-toolkit` crate."


[lib]
proc-macro = true


[dependencies]
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
proc-macro-error = "1.0"
quote = "1.0"
syn   = { version = "2.0", features = ["derive"] }
