[package]
name = "ast-toolkit-diagnostic-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Implements the derive macros for the `ast-toolkit-diagnostic`-crate."


[lib]
proc-macro = true


[dependencies]
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
lazy_static = "1.4"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
rand = "0.8"
quote = "1.0"
syn   = { version = "2.0", features = ["derive"] }


[features]
default = []
