[package]
name = "ast-toolkit-railroad-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Implements the derive macros for the `ast-toolkit-railroad`-crate."


[lib]
proc-macro = true


[dependencies]
lazy_static = "1.5.0"
proc-macro2 = "1.0.92"
proc-macro-error = "1.0.4"
rand = "0.8.5"
quote = "1.0.38"
syn   = { version = "2.0.95", features = ["derive", "extra-traits", "full"] }


[features]
default = []
