[package]
name = "ast-toolkit-railroad-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Implements the derive macros for the `ast-toolkit-railroad`-crate."


[lib]
proc-macro = true


[dependencies]
lazy_static = "1.4"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
# rand = "0.9"
quote = "1.0"
syn   = { version = "2.0", features = ["derive", "extra-traits", "full", "visit"] }


[features]
default = []
