[package]
name = "ast-toolkit-snack-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Implements the derive macros for the `ast-toolkit-snack`-crate."


[lib]
proc-macro = true


[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-error = "1.0"
quote = "1.0"
syn   = { version = "2.0", features = ["derive", "extra-traits", "full"] }


[features]
default = []
