[package]
name = "ast-toolkit-snack-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Implements the derive macros for the `ast-toolkit-snack`-crate."


[lib]
proc-macro = true


[dependencies]
proc-macro2 = { version = "1.0.92", features = ["span-locations"] }
quote = "1.0.38"
syn   = { version = "2.0.95", features = ["derive", "extra-traits", "full"] }
unicode-segmentation = "1.12.0"


[features]
default = []
