[package]
name = "ast-toolkit-span-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Implements the derive macros for the `ast-toolkit-span`-crate."


[lib]
proc-macro = true


[dependencies]
proc-macro2 = { version = "1.0", default-features = false, features = [] }
quote = { version = "1.0", default-features = false, features = [] }
syn = { version = "2.0", default-features = false, features = [
    "clone-impls",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }


[features]
default = []
