[package]
name = "ast-toolkit-print"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provides utilities for printing ASTs."


[dependencies]
# Note: the .2 is actually needed here, introduces a new feature we depend on
console = { version = "0.16.2", optional = true }


[features]
default = ["macros"]

color = ["dep:console"]
macros = []
