[package]
name = "ast-toolkit-punctuated"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Implements a wrapper around a [`Vec`] that allows it to be convenient for modelling punctuated lists in ASTs (e.g., comma-separated list)."


[dependencies]
better-derive = { git = "https://github.com/Lut99/better-derive-rs", default-features = false, optional = true }
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"], optional = true }

ast-toolkit-snack = { path = "../ast-toolkit-snack", default-features = false, optional = true }
ast-toolkit-span = { path = "../ast-toolkit-span", default-features = false, optional = true }


[features]
default = [ "normal" ]

normal = [ "dep:enum-debug" ]
snack = ["dep:better-derive", "dep:ast-toolkit-snack", "dep:ast-toolkit-span"]
trailing = []
