[package]
name = "ast-toolkit-punctuated"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Implements a wrapper around a [`Vec`] that allows it to be convenient for modelling punctuated lists in ASTs (e.g., comma-separated list)."


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

better-derive = { git = "https://github.com/Lut99/better-derive-rs", tag = "v3.0.0", default-features = false, optional = true }
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = [
    "derive",
], optional = true }

ast-toolkit-railroad = { path = "../ast-toolkit-railroad", default-features = false, optional = true }
ast-toolkit-snack = { path = "../ast-toolkit-snack", default-features = false, optional = true }
ast-toolkit-span = { path = "../ast-toolkit-span", default-features = false, optional = true }


[dev-dependencies]
serde_json = "1.0"


[features]
default = ["macros"]

macros = []
railroad = ["dep:ast-toolkit-railroad"]
serde = ["dep:serde"]
snack = ["dep:better-derive", "dep:ast-toolkit-snack", "dep:ast-toolkit-span"]
span = ["dep:ast-toolkit-span"]
