[package]
name = "ast-toolkit-snack"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provides a parser-combinator framework heavily inspired by [nom](https://github.com/rust-bakery/nom), except that it gives up a little bit of performance over a much more human-friendly error experience."


[[example]]
name = "add"
path = "examples/add.rs"
required-features = []


[dependencies]
ast-toolkit-span = { path = "../ast-toolkit-span" }
better-derive = { git = "https://github.com/Lut99/better-derive-rs" }
paste = "1.0"
unicode-segmentation = "1.11"

ast-toolkit-snack-derive = { path = "../../derive/ast-toolkit-snack-derive", optional = true }


[dev-dependencies]


[features]
default = ["extra"]

extra = ["c"]
c = []

derive = ["dep:ast-toolkit-snack-derive"]
streaming = []
