[package]
name = "ast-toolkit-snack"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provides a parser-combinator framework heavily inspired by [nom](https://github.com/rust-bakery/nom), except that it gives up a little bit of performance over a much more human-friendly error experience."


[[example]]
name = "add"
path = "examples/add.rs"
required-features = []


[dependencies]
ast-toolkit-span = { path = "../ast-toolkit-span" }
better-derive = { git = "https://github.com/Lut99/better-derive-rs", tag = "v3.0.0" }
paste = "1.0"


[dev-dependencies]


[features]
default = ["extra", "macros"]

extra = []

macros = []
