[package]
name = "ast-toolkit-sources"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Highly specialized datastructure for loading source texts and parsing them with references, while mutating the structure itself to add more texts."


[dependencies]


[features]
default = []
