[package]
name = "ast-toolkit-span"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provides a Span that is akin to a slice but with more context. Used in various other parts of the ast-toolkit."


[dependencies]
console = "0.15"
serde = { version = "1.0", features = ["derive"], optional = true }


[dev-dependencies]
function_name = "0.3"


[features]
default = []

serde = ["dep:serde"]
