[package]
name = "ast-toolkit-tokens"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provides tools for defining tokens (i.e., nodes in an AST that relate to a keyword or punctuation) quickly and ergnomically."


[dependencies]
ast-toolkit-snack = { path = "../ast-toolkit-snack", optional = true }
ast-toolkit-span = { path = "../ast-toolkit-span" }


[dev-dependencies]
ast-toolkit-railroad = { path = "../ast-toolkit-railroad" }


[features]
default = ["macros"]

macros = []
railroad = []
snack = ["dep:ast-toolkit-snack"]
