[package]
name = "ast-toolkit-tokens"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provides tools for defining tokens (i.e., nodes in an AST that relate to a keyword or punctuation) quickly and ergnomically."


[dependencies]
better-derive = { git = "https://github.com/Lut99/better-derive-rs", tag = "v3.0.0", optional = true }
serde = { version = "1.0", optional = true }

ast-toolkit-railroad = { path = "../ast-toolkit-railroad", optional = true }
ast-toolkit-snack = { path = "../ast-toolkit-snack", optional = true }
ast-toolkit-span = { path = "../ast-toolkit-span" }


[dev-dependencies]
serde_json = "1.0.140"


[features]
default = ["macros"]

serde = ["dep:serde", "ast-toolkit-span/serde"]

macros = []
railroad = ["dep:ast-toolkit-railroad"]
snack = ["dep:ast-toolkit-snack", "dep:better-derive"]
